[update] fix z-index

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -533,6 +533,8 @@ h1 {
     }
 
     .video {
+        position: relative;
+        z-index: 3;
         max-width: 520px;
         height: 300px;
         overflow: hidden;
